# briggs

./: .gitignore  Makefile  Makefile.in  README.md  TODO  briggs.1  configure.ac  death.md  etc.c  lite.c  lite.h  main.c  mockery.1  parsely.c  parsely.h  style.css  tests.mk
data/: address.c
man/man1/: briggs.1
src/: config.h.in  main.c
test/: bad-escapes.csv  ban-20.csv  banabb-20.csv  banshort.csv  banshorter.csv  bantest.csv  full-tab.csv  inventory.csv  postgresql  semi.csv
tests/: Makefile  README.md  ban-top-100.csv  media_mysql.sql  media_postgres.sql  oracle.csv  pipe_delimited_ambiguous_row_test.csv  pipe_delimited_ambiguous_row_test.mysqldump  sch_data_v4_top50.csv  scholarships-by-carat.csv  scholarships-mysql.sql  scholarships-oracle.sql  scholarships-postgres-tables.sql  scholarships-postgres.sql  scholarships-sqlite3.sql  specification_versions_pipe_delimited.csv  top_30_scholarships_semicolon_delimited.csv  top_30_scholarships_tab_delimited.csv  type_tests_mysql.csv  type_tests_postgres.csv  washburn_mysql.sql  washburn_postgres.sql
